--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "prettier": "@epic-web/config/prettier",
   "scripts": {
+    "test": "vitest",
     "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
@@ -22,15 +23,20 @@
   "devDependencies": {
     "@epic-web/config": "^1.11.2",
     "@reatom/eslint-plugin": "^3.4.3",
+    "@testing-library/react": "^16.0.0",
+    "@types/bun": "latest",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@vitejs/plugin-react": "^4.3.1",
     "babel-plugin-react-compiler": "^0.0.0-experimental-938cd9a-20240601",
     "eslint": "^8",
     "eslint-config-next": "15.0.0-rc.0",
+    "jsdom": "^24.1.0",
     "postcss": "^8",
     "prettier": "^3.3.2",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vitest": "^1.6.0"
   }
 }
