--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
 		"target": "ES2017",
 		"lib": ["dom", "dom.iterable", "esnext"],
 		"allowJs": true,
+		"allowImportingTsExtensions": true,
 		"skipLibCheck": true,
 		"strict": true,
 		"noEmit": true,
@@ -13,6 +14,7 @@
 		"isolatedModules": true,
 		"jsx": "preserve",
 		"incremental": true,
+		"types": ["@testing-library/jest-dom"],
 		"plugins": [
 			{
 				"name": "next"
